# jigsaw_puzzles

./: Cargo.toml  README.md
analysis/: 2360_28_12_g_m_100_1.csv  2360_28_12_g_m_100_2.csv  2360_28_12_g_m_100_3.csv  2360_28_12_g_m_100_4.csv  2360_28_12_g_m_100_5.csv  2360_28_12_g_m_300_1.csv  2360_28_12_g_m_300_2.csv  2360_28_12_g_m_300_3.csv  2360_28_12_g_m_300_4.csv  2360_28_12_g_m_300_5.csv  2360_28_12_g_s_100_1.csv  2360_28_12_g_s_100_2.csv  2360_28_12_g_s_100_3.csv  2360_28_12_g_s_100_4.csv  2360_28_12_g_s_100_5.csv  2360_28_12_g_s_300_1.csv  2360_28_12_g_s_300_2.csv  2360_28_12_g_s_300_3.csv  2360_28_12_g_s_300_4.csv  2360_28_12_g_s_300_5.csv  2360_28_12_l_m_1.csv  2360_28_12_l_m_2.csv  2360_28_12_l_m_3.csv  2360_28_12_l_m_4.csv  2360_28_12_l_m_5.csv  2360_28_1_g_m_100_1.csv  2360_28_1_g_m_100_2.csv  2360_28_1_g_m_100_3.csv  2360_28_1_g_m_100_4.csv  2360_28_1_g_m_100_5.csv  2360_28_1_l_m_1.csv  2360_28_1_l_m_2.csv  2360_28_1_l_m_3.csv  2360_28_1_l_m_4.csv  2360_28_1_l_m_5.csv  3300_28_12_g_m_100_1.csv  3300_28_12_g_m_100_2.csv  3300_28_12_g_m_100_3.csv  3300_28_12_g_m_100_4.csv  3300_28_12_g_m_100_5.csv  (+166 more)
analysis/plots/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  8.tex
analysis/tables/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex
src/: algorithms_async.rs  app.rs  genetic_algorithm.rs  genetic_algorithm_async.rs  image_processing.rs  lib.rs  loop_constraints_algorithm.rs  main.rs
src/algorithms_async/: genetic_algorithm.rs  loop_constraints_algorithm.rs
src/app/: app_ui.rs  images_loader.rs  style.rs
